--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "htvt.vtvcab.monitorsystem"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 5
-        versionName "1.3"
+        versionCode 7
+        versionName "1.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -36,7 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
     implementation 'com.android.volley:volley:1.1.1'
-    implementation project(path: ':seekbar')
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.play:core:1.6.1'
+    implementation 'org.jsoup:jsoup:1.13.1'
 }
